[gd_scene load_steps=6 format=3 uid="uid://pvmqpfdx377w"]

[ext_resource type="Texture2D" uid="uid://ofmyoeyq4hpc" path="res://assets/Menu/Background.jpg" id="1_1y285"]
[ext_resource type="Script" path="res://Scenes/Menu/single_player.gd" id="1_gtyg5"]
[ext_resource type="Texture2D" uid="uid://bg4u2vqjqw2mn" path="res://assets/Menu/prev.png" id="2_rcvob"]
[ext_resource type="Texture2D" uid="uid://ctclrm82phm6k" path="res://assets/Menu/NextArrow.png" id="4_refk8"]
[ext_resource type="AudioStream" uid="uid://csqwwe8v4hmh8" path="res://assets/Sounds/Lvl4.wav" id="5_w00th"]

[node name="SinglePlayer" type="Node"]
script = ExtResource("1_gtyg5")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1y285")

[node name="Start" type="Button" parent="."]
offset_left = 324.0
offset_top = 490.0
offset_right = 790.0
offset_bottom = 548.0
text = "Start"

[node name="PlayerSelection" type="VBoxContainer" parent="."]
offset_left = 250.0
offset_top = 59.0
offset_right = 890.0
offset_bottom = 427.0

[node name="Player1" type="Label" parent="PlayerSelection"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 40
text = "Player 1's  Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Character" type="HBoxContainer" parent="PlayerSelection"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Previous" type="Button" parent="PlayerSelection/Character"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_rcvob")
icon_alignment = 1

[node name="Character" type="TextureRect" parent="PlayerSelection/Character"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Next" type="Button" parent="PlayerSelection/Character"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_refk8")

[node name="Back" type="Button" parent="."]
offset_left = 1007.0
offset_top = 595.0
offset_right = 1119.0
offset_bottom = 626.0
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_w00th")
autoplay = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PlayerSelection/Character/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="PlayerSelection/Character/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
